--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     line-height: 1.7;
     color: pink;
     ">
-      <p>我是一名专注于软件质量保障的专业人士，拥有扎实的软件工程背景和丰富的质量保证经验。我热衷于确保软件产品的稳定性和可靠性，致力于通过严格的质量控制和持续改进来提升产品的用户体验。</p>
+      <p>有2年互联网软件产品经验，熟悉产品开发流程，有很强的需求分析、交互设计、解决方案能力，擅长B端和G端；将近1年的汽车行业软件质量经验，熟悉任务/缺陷流转流程，有很强的分解项目目标、根据节点完成并推进整体项目进度的能力</p>
+      <p>精通Jira、Polarion、Confluence、Artifactory、禅道、飞书、Excel、Axure、墨刀、Visio、SVN、mindmanager、Xmind等产品设计和项目管理的软件</p>
       <p>在我的职业生涯中，我主要负责软件质量管理、测试策略制定以及自动化测试脚本的编写。我熟悉各种主流的质量管理工具和方法，如Jira、TestRail和Selenium，能够高效地组织和执行测试工作，确保软件质量符合预期标准。</p>
       <p>我注重细节和精确性，善于发现问题并提出有效的改进方案。同时，我擅长与团队成员沟通协作，推动问题解决并促进团队整体的质量意识提升。我始终相信，只有不断提升软件质量，才能满足客户需求并保持竞争优势。</p>
       <p>作为一名软件质量岗位的专业人士，我深知质量是软件产品的生命线。我期待在贵公司发挥我的专业优势，为提升软件产品的质量和用户体验贡献自己的力量。我相信，我的经验和技能将使我成为贵公司质量保证团队中不可或缺的一员。</p>
