--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>寞狗蛋简历</title>
+    <title>黄思宇简历</title>
     <style>  
       body {
         margin: 0;
@@ -27,10 +27,10 @@
     ">
       <p>有2年互联网软件产品经验，熟悉产品开发流程，有很强的需求分析、交互设计、解决方案能力，擅长B端和G端；将近1年的汽车行业软件质量经验，熟悉任务/缺陷流转流程，有很强的分解项目目标、根据节点完成并推进整体项目进度的能力</p>
       <p>精通Jira、Polarion、Confluence、Artifactory、禅道、飞书、Excel、Axure、墨刀、Visio、SVN、mindmanager、Xmind等产品设计和项目管理的软件</p>
-      <p>在我的职业生涯中，我主要负责软件质量管理、测试策略制定以及自动化测试脚本的编写。我熟悉各种主流的质量管理工具和方法，如Jira、TestRail和Selenium，能够高效地组织和执行测试工作，确保软件质量符合预期标准。</p>
-      <p>我注重细节和精确性，善于发现问题并提出有效的改进方案。同时，我擅长与团队成员沟通协作，推动问题解决并促进团队整体的质量意识提升。我始终相信，只有不断提升软件质量，才能满足客户需求并保持竞争优势。</p>
-      <p>作为一名软件质量岗位的专业人士，我深知质量是软件产品的生命线。我期待在贵公司发挥我的专业优势，为提升软件产品的质量和用户体验贡献自己的力量。我相信，我的经验和技能将使我成为贵公司质量保证团队中不可或缺的一员。</p>
-      <p>我的网站</p>
+      <p>2023.8-2024.5外包至上海蔚来汽车任职软件质量专员，提升NT3平台软件质量，负责在Jira创建并分发任务给测试，推动并维护任务的内容和状态，协助项目收集测试数据并分析，进行质量报告，设计报表、任务看板和dashboard，统计并汇报研发任务的完成情况，促进项目按计划实施，协助监控软件研发质量，负责部门内软件测试流程的过程定义、实施、管控，通过Workflow给人员配置Jira/Polarion/Confluence/Artifactory权限。经过每月检查Epic票，内容填写不合格的情况减少至29.41%；经过每天通报质量报告，超期问题数量降幅达86.49%，Development票推状态异常任务降幅达80.82%</p>
+      <p>2022.3-2023.8在上海数果公司任职产品经理，负责迭代web、小程序和APP产品；协助售前编写解决方案、招投标、技术建设方案和产品宣讲PPT等；产品开发根据客户需求定制，合理复用功能，规划产品形态，梳理业务流程，输出产品技术文档，管理项目进度等；产品上线后整理相关交付及培训文档，跟踪上线反馈并优化功能交互；负责CMMI3审核认证工作。专注于消防救援、安防应急领域，为解决客户挥渠道不畅、设备不专业等痛点提供集成解决方案，完成公司一千万盈利目标。</p>
+      <p>2021.7-2021.12在杭州奔云公司任职产品助理，负责迭代浙江电网OA系统，产品调研通过与客户沟通需求、内部调研、自我挖掘方式，对电网系统进行调研及竞品分析，合理复用web端业务逻辑和功能流程简化APP功能；产品设计梳理业务逻辑和产品架构，组织评审，跟进测试；文档产出：输出可行性研究报告、设计说明书、蓝图设计、功能list、PRD、测试用例，绘制高保真原型界面200+；系统实施工作，编写并收集初始化信息表，组织实施、培训，售后跟踪协助运维处理问题，收集客户反馈根据业务判断合理性</p>
+      <p>我的简历网站</p>
     </div>
     <div style="
     background-color: #f1f1f1;
@@ -38,7 +38,7 @@
     padding:40px;
     font size:12px;
     ">
-    <p>高端人士的网站</p>
+    <p>我的简历网站</p>
       <a href="https://www.mogoudan.com/">友情链接</a>
     </div>
   </body>
