--- a/index.html
+++ b/index.html
@@ -14,30 +14,29 @@
     <div style="
     background-color: #f1f1f1;
     text-align:center;
-    padding:40px;
+    padding: 20px;
     ">
-      <img src="https://i0.imgs.ovh/2024/02/29/7swxd.jpeg"alt="寞狗蛋"width="88px",height="88px" >
+      <img src="https://pic.imgdb.cn/item/665d6ced5e6d1bfa05d04721.png" alt="黄思宇"width="88px",height="88px" >
     </div>
     <div style="
     max-width: 700px;
-    margin: 30px auto;
-    padding: 15px;
+    margin: 20px auto;
+    padding: 10px;
     line-height: 1.7;
-    color: pink;
+    color: black;
     ">
-      <p>有2年互联网软件产品经验，熟悉产品开发流程，有很强的需求分析、交互设计、解决方案能力，擅长B端和G端；将近1年的汽车行业软件质量经验，熟悉任务/缺陷流转流程，有很强的分解项目目标、根据节点完成并推进整体项目进度的能力</p>
-      <p>精通Jira、Polarion、Confluence、Artifactory、禅道、飞书、Excel、Axure、墨刀、Visio、SVN、mindmanager、Xmind等产品设计和项目管理的软件</p>
-      <p>2023.8-2024.5外包至上海蔚来汽车任职软件质量专员，提升NT3平台软件质量，负责在Jira创建并分发任务给测试，推动并维护任务的内容和状态，协助项目收集测试数据并分析，进行质量报告，设计报表、任务看板和dashboard，统计并汇报研发任务的完成情况，促进项目按计划实施，协助监控软件研发质量，负责部门内软件测试流程的过程定义、实施、管控，通过Workflow给人员配置Jira/Polarion/Confluence/Artifactory权限。经过每月检查Epic票，内容填写不合格的情况减少至29.41%；经过每天通报质量报告，超期问题数量降幅达86.49%，Development票推状态异常任务降幅达80.82%</p>
-      <p>2022.3-2023.8在上海数果公司任职产品经理，负责迭代web、小程序和APP产品；协助售前编写解决方案、招投标、技术建设方案和产品宣讲PPT等；产品开发根据客户需求定制，合理复用功能，规划产品形态，梳理业务流程，输出产品技术文档，管理项目进度等；产品上线后整理相关交付及培训文档，跟踪上线反馈并优化功能交互；负责CMMI3审核认证工作。专注于消防救援、安防应急领域，为解决客户挥渠道不畅、设备不专业等痛点提供集成解决方案，完成公司一千万盈利目标。</p>
-      <p>2021.7-2021.12在杭州奔云公司任职产品助理，负责迭代浙江电网OA系统，产品调研通过与客户沟通需求、内部调研、自我挖掘方式，对电网系统进行调研及竞品分析，合理复用web端业务逻辑和功能流程简化APP功能；产品设计梳理业务逻辑和产品架构，组织评审，跟进测试；文档产出：输出可行性研究报告、设计说明书、蓝图设计、功能list、PRD、测试用例，绘制高保真原型界面200+；系统实施工作，编写并收集初始化信息表，组织实施、培训，售后跟踪协助运维处理问题，收集客户反馈根据业务判断合理性</p>
-      <p>我的简历网站</p>
+      <p>有2年互联网软件产品经验，熟悉产品开发流程，有很强的需求分析、交互设计、解决方案能力，擅长B端和G端。</p>
+      <p>将近1年的汽车行业软件质量经验，熟悉任务/缺陷流转流程，有很强的分解项目目标、根据节点完成并推进整体项目进度的能力。</p>
+      <p>精通Jira、Polarion、Confluence、Artifactory、禅道、飞书、Excel、Axure、墨刀、Visio、SVN、mindmanager、Xmind等产品设计和项目管理的软件。</p>
+      <p>2023.8-2024.5外包至上海蔚来汽车任职软件质量专员，提升NT3平台软件质量，负责在Jira创建并分发任务给测试，推动并维护任务的内容和状态，协助项目收集测试数据并分析，进行质量报告，设计报表、任务看板和dashboard，统计并汇报研发任务的完成情况，促进项目按计划实施，协助监控软件研发质量，负责部门内软件测试流程的过程定义、实施、管控，通过Workflow给人员配置Jira/Polarion/Confluence/Artifactory权限。</p>
+      <p>2022.3-2023.8在上海数果公司任职产品经理，负责迭代web、小程序和APP产品；协助售前编写解决方案、招投标、技术建设方案和产品宣讲PPT等；产品开发根据客户需求定制，规划产品形态，梳理业务流程，输出产品技术文档，管理项目进度等；产品上线后整理相关交付及培训文档，跟踪上线反馈并优化功能交互；负责CMMI3审核认证工作。</p>
+      <p>2021.7-2021.12在杭州奔云公司任职产品助理，负责迭代浙江电网OA系统，产品调研通过与客户沟通、内部调研等方式对OA系统调研及竞品分析，合理复用功能简化流程；产品设计梳理业务逻辑和产品架构，组织评审，跟进测试；文档产出可行性研究报告、设计说明书、蓝图设计、PRD、测试用例及高保真原型200+；组织系统实施工作，售后跟踪协助运维处理问题，收集客户反馈根据业务判断合理性。</p>
     </div>
     <div style="
     background-color: #f1f1f1;
     text-align:center;
-    padding:40px;
-    font size:12px;
-    ">
+    padding:20px;
+    font-size:12px;">
     <p>我的简历网站</p>
       <a href="https://www.mogoudan.com/">友情链接</a>
     </div>
