--- a/new.html
+++ b/new.html
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body style="margin:0">
-    <h1>新页面啦，哈哈，我厉害吧</h1>
-    <p>在此处开始写html代码，下面将会实时显示效果。</p>
+    <h1>新页面啦，哈哈，自学成才，我厉害吧！！！</h1>
+    <p>希望等个有缘公司招我干本命工，呜呜呜，不想再颠沛流~~~(>_<)~~~</p>
   </body>
 </html>
