--- a/new.html
+++ b/new.html
@@ -13,5 +13,6 @@
   <body style="margin:0">
     <h1>新页面啦，哈哈，自学成才，我厉害吧！！！</h1>
     <p>希望等个有缘公司招我干本命工，呜呜呜，不想再颠沛流~~~(>_<)~~~</p>
+    <a>联系方式：hsy94pm@163.com</a>
   </body>
 </html>
