--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     padding:20px;
     font-size:12px;">
     <p>我的简历网站</p>
-      <a href="https://1rita6.github.io/Resume/new.html">友情链接</a>
+      <a href="https://1rita6.github.io/Resume/new.html">个人链接</a>
     </div>
   </body>
 </html>
